Fix spacing on paragraphs, lists, and posts, and make links red again

--- a/assets/css/rascal.less
+++ b/assets/css/rascal.less
@@ -19,6 +19,8 @@ body {
 
 p {
     line-height: 1.6em;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
 }
 
 h1.post-title {
@@ -36,7 +38,7 @@ h2 a {
     color: @rascal-gray;
 }
 
-a:hover {
+a, a:hover {
     color: @rascal-red;
 }
 
@@ -58,7 +60,9 @@ h5 {
     max-width: 820px;
     background-color: @rascal-bright-white;
     margin-top: 0px;
-    padding-top: 80px;
+    padding-top: 50px;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
     position: static; /* to prevent weird overlap on page.hbs */
 }
 
@@ -66,6 +70,15 @@ h5 {
     margin-top: 0px;
     padding-top: 20px;
     border-top: @rascal-gray 1px solid;
+}
+
+ul li {
+    line-height: 1.6em;
+}
+
+ul {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
 }
 
 ul.nav li {
